--- a/heima-manager/heima-dao/pom.xml
+++ b/heima-manager/heima-dao/pom.xml
@@ -57,6 +57,8 @@
             <artifactId>pagehelper</artifactId>
             <version>${pagehelper.version}</version>
         </dependency>
+
+
         <!-- MySql -->
         <dependency>
             <groupId>mysql</groupId>
@@ -106,6 +108,20 @@
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>2.8.2</version>
                 </plugin>
+
+                <plugin>
+                    <groupId>org.mybatis.generator</groupId>
+                    <artifactId>mybatis-generator-maven-plugin</artifactId>
+                    <version>1.3.2</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>mysql</groupId>
+                            <artifactId>mysql-connector-java</artifactId>
+                        </dependency>
+                    </dependencies>
+
+                </plugin>
+
             </plugins>
         </pluginManagement>
     </build>
